[package]
name = "docparser"
version = "0.1.0"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudios.com>"]
description = "A CLI tool to extract Rust doc comments and export them in JSON or WSON format"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/LunaStev/docparser"
categories = ["command-line-utilities", "development-tools::debugging"]
keywords = ["rust", "doc", "parser", "cli", "documentation"]
publish = true

[lib]
name = "docparser"
path = "src/lib.rs"

[dependencies]
wson_rs = "0.2.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1.11.1"